...
                    ],
                  ),
                ),
              ],
            ),
            Positioned(
              key: const ValueKey('BackButton'),
              top: 10,
              left: 10,
              child: ZoomTapAnimation(
                onTap: () => Navigator.pop(context),
                child: SvgPicture.asset(arrowLeftIc, width: 60),
              ),
...
